final version report

--- a/Задание №3/Mikhailov.tex
+++ b/Задание №3/Mikhailov.tex
@@ -99,7 +99,7 @@
 	\begin{figure}[h]
 		\centering
 		\includegraphics[width=0.8\textwidth]{ER-model.png}
-		\caption{ER-модель на основе описаний предметной области и прецедентов из предыдущего этапа.}
+		\caption{ER-модель.}
 		\label{fig:ER-model}
 	\end{figure}
 	\newpage
